client/src/App.css
.c-h {
	display: flex;
	justify-content: center;
	align-items: center;
}

#root {
	display: grid;
	grid-template-rows: auto 1fr;
	width: 100vw;
	height: 100vh;
}

/* --- Navbar --- */
nav.false button.navbar-toggler,
nav.false div.navbar-nav {
	/* Signed out */
	display: none;
}

.navbar-nav a:last-child {
	color: rgba(255, 255, 255, 0.5) !important; /* Override "active" color */
}

/* --- Account --- */
div#account {
	display: grid;
	place-items: center;
	background-image: linear-gradient(90deg, rgb(65, 80, 160), rgb(25, 40, 75));
}

div#account form {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	gap: 1rem;
	width: 90%;
	max-width: 400px;
	padding: 2rem;
	background-color: white;
	border-radius: 4px;
	box-shadow: -2px 2px 6px rgb(0 0 0 / 30%);

	animation: SlideRight 250ms;
	animation-fill-mode: forwards;
}

div#account form.animateOut {
	animation: SlideLeft 250ms;
	animation-fill-mode: forwards;
}

@keyframes SlideRight {
	0% {
		margin-right: 5%;
		opacity: 0;
	}

	100% {
		margin-right: 0;
		opacity: 1;
	}
}

@keyframes SlideLeft {
	0% {
		margin-right: 0;
		opacity: 1;
	}

	100% {
		margin-right: 5%;
		opacity: 0;
	}
}

div#account form hr {
	width: 75%;
	border-color: rgba(0, 0, 0, 0.5);
}

div#account form button,
div#account form p {
	width: max-content;
	margin: 0px auto;
}

/* --- Library --- */
/* Sort */
.sort_container {
	display: flex;
	align-items: center;
	width: max-content;
	margin: 10px auto;
}

.sort_container > p {
	margin: 0px 8px 0px 0px;
}

/* MovieInfo (default: modal version) */
.movie_info,
.movie_info_col {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.movie_info_col > p:first-of-type {
	margin-bottom: 0;
	font-weight: bold;
}

.movie_info_row {
	display: flex;
	justify-content: space-between;
}

.movie_info_row > div {
	display: flex;
	align-items: center;
}

.movie_info_row > div > i {
	margin: 0px 4px 1rem 0px;
}

.movie_info_title {
	font-size: 20px;
}

.movie_info_series {
	font-size: 18px;
}

.formats_container {
	display: flex;
	justify-content: space-between;
	width: 100%;
	margin-top: 4px;
}

.format_item {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	opacity: 0.3;
}

.has_format {
	opacity: 1 !important;
}

.format_item > p {
	margin-bottom: 0px;
}

/* Movie cards */
.movie_card_container {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}

h1.series_name {
	width: 100%;
	margin-bottom: 0px;
	padding: 6px 0px;
	text-align: center;
	border-top: 1px solid rgb(200, 200, 200);
}

h1.series_name:not(:first-of-type) {
	margin-top: 8px;
}

.movie_card {
	position: relative;
	margin: 8px;
	width: 156px;
	height: 231.4px;
	box-shadow: 0px 0px 6px 0px #343a40;
	overflow: hidden;
}

.movie_card_image {
	position: relative;
	display: block;
	width: 100%;
	height: 100%;
	background-color: rgb(50, 50, 50);
	object-fit: cover;
}

/* MovieInfo (card version) */
.movie_card > .movie_info {
	position: absolute;
	top: 100%;
	width: 100%;
	height: 45%;
	padding: 6px 12px;
	color: white;
	font-size: 14px;
	background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 1));
	transition: 0.4s ease;
}

.movie_card .movie_info_title {
	font-size: 18px;
}

.movie_card .movie_info_series {
	font-size: 16px;
}

.movie_card .modal_only {
	display: none;
}

/* Modal */
.modal-dialog {
	width: 332px;
	margin: 18px auto;
}

.modal-body {
	display: flex;
	flex-direction: column;
}

.modal_top {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	margin: 0px auto 1rem;
}

.modal_top > img {
	width: 300px;
	height: 445px;
	margin: 0px auto 0.5rem;
	box-shadow: 0px 0px 4px 0px #343a40;
	object-fit: cover;
}

.modal_top > div {
	display: flex;
	justify-content: space-between;
}

.modal_top button {
	width: 146px;
}

/* --- Add --- */
/* Bootstrap overrides */
.container-fluid {
	padding-left: 0px;
	padding-right: 0px;
}

#add form {
	padding: 18px;
}

#add_movie_card_container {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}

.add_movie_card {
	display: grid;
	grid-template-rows: 223px auto;
	place-items: center;
	width: 150px;
	margin: 11px;
	border: 1px solid black;
	border-radius: 0px 0px 4px 4px;
	cursor: pointer;
}

.add_movie_card > div {
	width: 100%;
	height: 100%;
	overflow: hidden;
}

.add_movie_card img {
	width: 100%;
	height: 100%;
	object-fit: cover;
	transition: 0.2s;
}

.add_movie_card:hover img {
	transform: scale(1.05);
}

.add_movie_card > p {
	margin: 8px;
	text-align: center;
	transition: 0.2s;
}

.add_movie_card > p > span {
	font-style: italic;
}

/* --- Edit --- */
#edit form {
	padding: 18px;
}

@media only screen and (min-width: 576px) {
	.navbar-nav {
		width: 100%;
	}

	.navbar-nav a:last-child {
		margin-left: auto;
	}

	.movie_card {
		width: 300px;
		height: 445px;
		margin: 12px;
		cursor: pointer;
	}

	.movie_card:hover .movie_info,
	.movie_card:focus .movie_info {
		top: 55%;
	}

	.add_movie_card {
		grid-template-rows: 297px auto;
		width: 200px;
	}
}

@media only screen and (min-width: 688px) {
	.modal-dialog {
		width: 664px;
		max-width: none;
	}

	.modal-body {
		flex-direction: row;
	}

	.modal_top {
		margin: 0px 1rem 0px 0px;
	}

	.modal_top > button {
		width: max-content;
	}
}

